k8s/overlays/aks/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - __ORIGIN_HOST__
      secretName: devsu-demo-tls
  rules:
    - host: __ORIGIN_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-demo
                port:
                  number: 80
